git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1122163 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,7 @@
   <property environment="env"/>
 
   <!-- Version  -->
-  <property name="version"              value="0.8.3-RC-2"/>
+  <property name="version"              value="0.8.3"/>
 
   <!-- Coordinate with ivysetting.xml -->
   <!-- repo-main, repo-dev, repo-local -->
