*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/iri/trunk@1108447 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>iri</artifactId>
   <packaging>jar</packaging>
   <name>Jena IRI</name>
-  <version>0.8-SNAPSHOT</version>
+  <version>0.8</version>
   <description/>
   <url>http://jena.sf.net/iri</url>
 
@@ -169,18 +169,20 @@
   </build>
   
   <distributionManagement>
+
     <repository>
       <id>jena-repo-dev</id>
       <name>Jena development repo</name>
-      <!--<url>sftp://jena.hpl.hp.com/var/repo-dev</url>-->
-      <url>file:tmp</url>
+      <url>sftp://jena.hpl.hp.com/var/repo</url>
+      <!--<url>file:tmp</url>-->
       <layout>default</layout>
     </repository>
+
     <snapshotRepository>
       <id>jena-repo</id>
       <name>Jena Repository</name>
-      <!--<url>sftp://jena.hpl.hp.com/var/repo</url>-->
-      <url>file:tmp</url>
+      <url>sftp://jena.hpl.hp.com/var/repo-dev</url>
+      <!--<url>file:tmp</url>-->
       <layout>default</layout>
     </snapshotRepository>
   </distributionManagement>
