*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/iri/trunk@1108449 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>iri</artifactId>
   <packaging>jar</packaging>
   <name>Jena IRI</name>
-  <version>0.8</version>
+  <version>0.9.SNAPSHOT</version>
   <description/>
   <url>http://jena.sf.net/iri</url>
 
@@ -173,7 +173,7 @@
     <repository>
       <id>jena-repo-dev</id>
       <name>Jena development repo</name>
-      <url>sftp://jena.hpl.hp.com/var/repo</url>
+      <url>sftp://openjena.org/var/repo</url>
       <!--<url>file:tmp</url>-->
       <layout>default</layout>
     </repository>
@@ -181,7 +181,7 @@
     <snapshotRepository>
       <id>jena-repo</id>
       <name>Jena Repository</name>
-      <url>sftp://jena.hpl.hp.com/var/repo-dev</url>
+      <url>sftp://openjena.org/var/repo-dev</url>
       <!--<url>file:tmp</url>-->
       <layout>default</layout>
     </snapshotRepository>
