git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1122197 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j.properties
+++ b/log4j.properties
@@ -30,14 +30,15 @@ log4j.logger.com.hp.hpl.jena.sparql=INFO
 # TDB
 log4j.logger.com.hp.hpl.jena.tdb=INFO
 
+
 ## General information about this instantiation
 ## General information at level DEBUG
-log4j.logger.com.hp.hpl.jena.tdb.info=INFO
-
+log4j.logger.com.hp.hpl.jena.tdb.info=DEBUG
 ## Logger for execution details.
 ## **  Need to switch on with the dynamic switch 
 ## **  "TDB.setExecutionLogging(true)" as well.
 ## log4j.logger.com.hp.hpl.jena.tdb.exec=INFO, explain
+
 log4j.logger.com.hp.hpl.jena.tdb.exec=ALL
 
 #log4j.logger.com.hp.hpl.jena.tdb.base.block.BlockMgrCache=DEBUG
