--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>sdb</artifactId>
   <packaging>jar</packaging>
   <name>SDB</name>
-  <version>1.3.1</version>
+  <version>1.3.2-SNAPSHOT</version>
   <description/>
   <url>http://openjena.org/SDB</url>
 
