--- a/build.xml
+++ b/build.xml
@@ -11,11 +11,11 @@
   <property environment="env"/>
 
   <!-- Version  -->
-  <property name="version"              value="0.8.4-RC-2"/>
+  <property name="version"              value="0.8.4"/>
 
   <!-- Coordinate with ivysetting.xml -->
   <!-- repo-main, repo-dev, repo-local -->
-  <property name="publish.repo"     value="repo-dev"/>
+  <property name="publish.repo"     value="repo-main"/>
 
   
   <!-- javadoc -->
