--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>arq</artifactId>
   <packaging>jar</packaging>
   <name>ARQ</name>
-  <version>2.8.2</version>
+  <version>2.8.3-SNAPSHOT</version>
 
   <description>ARQ is a SPARQL query engine for Jena</description>
   <url>http://openjena.org/ARQ</url>
@@ -329,10 +329,10 @@ build.time.txt=${build.time.txt}
       <id>jena-repo</id>
       <name>Jena repo</name>
 
-      <url>sftp://openjena.org/var/repo</url>
+      <!--<url>sftp://openjena.org/var/repo</url>-->
 
-      <!-- Because RC's aren't snapshots -->
-      <!-- <url>sftp://openjena.org/var/repo-dev</url>-->
+      <!-- Because RC's aren't snapshots IMHO -->
+      <url>sftp://openjena.org/var/repo-dev</url>
 
       <!--<url>file:tmp</url>-->
       <layout>default</layout>
