--- a/.classpath
+++ b/.classpath
@@ -18,7 +18,7 @@
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.5.8.jar" sourcepath="lib/slf4j-log4j12-1.5.8-sources.jar"/>
 	<classpathentry kind="lib" path="lib/jena-2.6.2.jar" sourcepath="lib/jena-2.6.2-sources.jar"/>
 	<classpathentry kind="lib" path="lib/iri-0.8.jar"/>
-	<classpathentry kind="lib" path="lib/jena-2.6.2-tests.jar" sourcepath="lib/jena-2.6.2-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jena-2.6.2-tests.jar" sourcepath="lib/jena-2.6.2-test-sources.jar"/>
 	<classpathentry kind="lib" path="lib/arq-2.8.2.jar" sourcepath="lib/jena-2.6.2-sources.jar"/>
 	<classpathentry kind="lib" path="lib/arq-2.8.2-tests.jar" sourcepath="lib/jena-2.6.2-sources.jar"/>
 	<classpathentry kind="output" path="classes"/>
