git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/SDB/trunk@1122321 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <licenses>
     <license>
       <name>BSD-style license</name>
-      <url>http://jena.sf.net/license.html</url>
+      <url>http://openjena.org/license.html</url>
     </license>
   </licenses>
 
