--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   <licenses>
     <license>
       <name>BSD-style license</name>
-      <url>http://jena.sf.net/license.html</url>
+      <url>http://openjena.org/license.html</url>
     </license>
   </licenses>
 
