git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1122348 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -12,6 +12,7 @@
 
   <!-- Version  -->
   <property name="version"              value="0.8.5-SNAPSHOT"/>
+  <property name="javadoc.window.title"   value="${Name}-0.8 Javadoc"/>
 
   <!-- Coordinate with ivysetting.xml -->
   <!-- repo-main, repo-dev, repo-local -->
