--- a/.classpath
+++ b/.classpath
@@ -19,7 +19,7 @@
 	<classpathentry kind="lib" path="lib/jena-2.6.2.jar" sourcepath="lib/jena-2.6.2-sources.jar"/>
 	<classpathentry kind="lib" path="lib/iri-0.8.jar"/>
 	<classpathentry kind="lib" path="lib/jena-2.6.2-tests.jar" sourcepath="lib/jena-2.6.2-test-sources.jar"/>
-	<classpathentry kind="lib" path="lib/arq-2.8.2.jar" sourcepath="lib/arq-2.8.2-sources.jar"/>
-	<classpathentry kind="lib" path="lib/arq-2.8.2-tests.jar" sourcepath="lib/jena-2.6.2-sources.jar"/>
+	<classpathentry kind="lib" path="lib/arq-2.8.3-SNAPSHOT-tests.jar"/>
+	<classpathentry kind="lib" path="lib/arq-2.8.3-SNAPSHOT.jar" sourcepath="lib/arq-2.8.3-SNAPSHOT-sources.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
