git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1122422 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -100,9 +100,28 @@
     </dependency>
 
     <dependency>
+      <!-- Some of log4j dependencies are broken -->
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <version>[1.2.12]</version>
+      <version>[1.2.15,]</version>
+      <exclusions>
+	<exclusion>
+	  <groupId>javax.jms</groupId>
+	  <artifactId>jms</artifactId>
+	</exclusion>
+	<exclusion>
+	  <groupId>com.sun.jdmk</groupId>
+	  <artifactId>jmxtools</artifactId>
+	</exclusion>
+	<exclusion>
+	  <groupId>com.sun.jmx</groupId>
+	  <artifactId>jmxri</artifactId>
+	</exclusion>
+	<exclusion>
+	  <groupId>javax.mail</groupId>
+	  <artifactId>mail</artifactId>
+	</exclusion>
+      </exclusions> 
     </dependency>
 
   </dependencies>
