git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1122433 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
       <!-- Some of log4j dependencies are broken -->
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <version>[1.2.15,]</version>
+      <version>1.2.14</version>
       <exclusions>
 	<exclusion>
 	  <groupId>javax.jms</groupId>
