git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1122433 13f79535-47bb-0310-9956-ffa450edef68

--- a/ivy.xml
+++ b/ivy.xml
@@ -29,13 +29,14 @@
     <!-- rev="latest.integration" -->
     
     <!-- We need the "tests" classifier but we then need to name all the bits we want. -->
-    <dependency org="com.hp.hpl.jena" name="arq" rev="latest.integration">
+    <dependency org="com.hp.hpl.jena" name="arq" rev="2.8.3-SNAPSHOT">
       <artifact name="arq"/>
       <artifact name="arq" mvn:classifier="tests"/>
       <artifact name="arq" mvn:classifier="javadoc"/>
       <artifact name="arq" mvn:classifier="sources"/>
       <artifact name="arq" mvn:classifier="test-sources"/>
-    </dependency>    
+      <exclude org="log4j" module="log4j"/>
+   </dependency>    
 
     <!-- Explicit - gets the javadoc and sources : As Jena depends on ARQ there is a (safe) conflict -->
     <dependency org="com.hp.hpl.jena" name="jena" rev="2.6.2">
@@ -52,31 +53,29 @@
     <dependency org="junit" name="junit" rev="4.5"/>
     <dependency org="org.slf4j" name="slf4j-api" rev="1.5.8"/>
 
-    <!-- Additional for development : logging implementation -->
+    <!-- Additional for development : logging implementation
     <dependency conf="dev->*" org="org.slf4j" name="slf4j-log4j12" rev="1.5.8">
       <exclude org="log4j" module="log4j"/>
     </dependency>
+    -->
 
-    <!-- Choose a log4j that works with ivy -->
+    <!-- Choose a log4j that works with ivy
     <dependency conf="dev->*" org="log4j" name="log4j" rev="1.2.14"/>
+    -->
 
     <!-- Java logging 
     <dependency org="org.slf4j" name="slf4j-jdk14" rev="1.5.8"/>
     -->
 
     <!-- Log4j 1.2.15 referes to inaccessible modules as excluded below. -->
-    <!-- Alternative.
-    <dependency conf="dev->*"  org="org.slf4j" name="slf4j-log4j12" rev="1.5.6"/>
-      <exclude org="log4j" module="log4j"/>
-    </dependency>
-    
-    <dependency conf="dev->*"   org="log4j" name="log4j" rev="1.2.15"> 
+    <!--    -->
+    <dependency conf="dev->*"   org="log4j" name="log4j" rev="1.2.14"> 
       <exclude org="com.sun.jmx" module="jmxri"/>
       <exclude org="com.sun.jdmk" module="jmxtools"/>
       <exclude org="javax.jms" module="jms"/>
       <exclude org="javax.mail" module="mail"/>
     </dependency>
-  -->
+
   </dependencies>
 
 </ivy-module>
